legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__shaperect_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">글 상자</span></p></div>
</div>
