legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__strikethrough_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '함초롬바탕'"><del>strikethrough</del></span></p>
<p><span style="font-size: 10.0pt; font-family: '함초롬바탕'"><del>취소선</del></span></p>
<p><span style="font-size: 10.0pt; font-family: '함초롬바탕'"><u>밑줄</u></span></p>
<p><span style="font-size: 10.0pt; font-family: '함초롬바탕'"><u>밑줄</u></span><span style="font-size: 10.0pt; font-family: '함초롬바탕'"><u><del>취소선</del></u></span><span style="font-size: 10.0pt; font-family: '함초롬바탕'"><b><u>굵게</u></b></span></p>
</div>
