legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__strikethrough_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 10, 0, 0, 5060 WIN32LEWindows_8



~~strikethrough~~

~~취소선~~

밑줄

밑줄~~취소선~~**굵게**
