legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__tabdef_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 10, 0, 0, 5060 WIN32LEWindows_8



L	L	L

R	R	R

C	C	C

M	M	M

L	L	L

E	E

I	I	I
