legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__table2_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<table class="hwp-table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 419.5pt">  </td>
</tr>
</table><div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '함초롬바탕'">표 </span><span style="font-size: 10.0pt; font-family: '함초롬바탕'"> 아래 캡션 개체와의 간격 3.00mm 바깥여백 모두 1.00mm</span></p></div><table class="hwp-table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 419.5pt">  </td>
</tr>
</table><div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '함초롬바탕'">표 </span><span style="font-size: 10.0pt; font-family: '함초롬바탕'"> 위 캡션 바깥여백 모두 5.00mm 개체와의 간격 10.00mm </span></p></div>
</div>
